<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="@dimen/top_margin"
    android:background="@color/cardview_light_background"
    app:cardBackgroundColor="@color/colorPrimaryDark"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/cityRV" />

        <TextView
            android:id="@+id/textView_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_toStartOf="@+id/textview_roomname_item" />

        <TextView
            android:id="@+id/textview_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_city"
            android:layout_toEndOf="@+id/textView_city"
            />

        <TextView
            android:id="@+id/tvBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textview_floor"
            android:layout_below="@+id/textView_city"
            android:text="@string/building_number" />

        <TextView
            android:id="@+id/textview_roomname_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_toEndOf="@+id/tvBuilding"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Room Name" />

        <TextView
            android:id="@+id/textview_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/textview_roomname_item"
            android:layout_toEndOf="@+id/tvFloor" />

        <TextView
            android:id="@+id/tvFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textview_roomname_item"
            android:layout_below="@+id/textview_roomname_item"
            android:text="@string/floor_number" />


    </RelativeLayout>

</android.support.v7.widget.CardView>